--- a/TravelPal/MainWindow.xaml
+++ b/TravelPal/MainWindow.xaml
@@ -5,8 +5,47 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelPal"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" FontFamily="Arial" Background="MintCream">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="240"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+        <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
+
+        <TextBlock Grid.Column="2" Grid.Row="1" FontSize ="56" Text="TravelPal" Margin="20" Foreground="#7B68EE" FontWeight="Bold"/>
+       
+        <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="20" Text="Username" Margin="0,0,0,5" HorizontalAlignment="Center"   />
+        
+        <TextBox x:Name="userName" Grid.Column="2" Grid.Row="3" Width="150" />
+
+        <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="20" Text="Password" Margin="0,10,0,5" HorizontalAlignment="Center"  />
+        <TextBox x:Name="passWord" Grid.Column="2" Grid.Row="5" Width="150"/>
+        
+        
+        <Button x:Name="SignInBtn" Content="Sign In" Click="SignInBtn_Click" Grid.Column="2" Grid.Row="7" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE"  Foreground="MintCream"/>
+
+        <TextBlock Grid.Column="2" Grid.Row="9" FontSize ="10" Text="Not a user?" Margin="85,10,0,0" HorizontalAlignment="Left" FontWeight="DemiBold"/>
+
+        <Button x:Name="RegisterBtn" Content="Register"  Click="RegisterBtn_Click" Grid.Column="2" Grid.Row="9" FontSize="10" Margin ="85,5" Width="50" HorizontalAlignment="Right" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
 
     </Grid>
 </Window>
+
