--- a/TravelPal/Windows/RegisterWindow.xaml
+++ b/TravelPal/Windows/RegisterWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelPal.Windows"
         mc:Ignorable="d"
-        Title="RegisterWindow" Height="450" Width="800" FontFamily="Arial" Background="MintCream">
+         Title="RegisterWindow" Height="450" Width="800" FontFamily="Arial" Background="MintCream">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -31,16 +31,17 @@
 
 
         <TextBlock Grid.Column="2" Grid.Row="1" FontSize ="56" Text="TravelPal" Margin="20" Foreground="#7B68EE" FontWeight="Bold"/>
-        <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="20" Text="Choose your Username" Margin="0,10,0,10" HorizontalAlignment="Center" />
+        <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="20" Text="Choose your Username" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox x:Name="userName" Grid.Column="2" Grid.Row="3" Width="150" />
 
-        <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="20" Text="Choose your Password" Margin="0,10,0,10" HorizontalAlignment="Center" />
+        <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="20" Text="Choose your Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox x:Name="passWord" Grid.Column="2" Grid.Row="5" Width="150"/>
 
-        <TextBlock Grid.Column="2" Grid.Row="6" FontSize ="20" Text="Confirm Password" Margin="0,10,0,10" HorizontalAlignment="Center" />
+        <TextBlock Grid.Column="2" Grid.Row="6" FontSize ="20" Text="Confirm Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox x:Name="ConfirmPassWord" Grid.Column="2" Grid.Row="7" Width="150"/>
 
-        <Button x:Name="RegisterButton" Content="Register" Grid.Column="2" Grid.Row="9" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
+
+        <Button x:Name="signInButton" Content="Register" Grid.Column="2" Grid.Row="9" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE"/>
 
 
     </Grid>
