--- a/TravelPal/Windows/TravelsWindow.xaml
+++ b/TravelPal/Windows/TravelsWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="TravelPal.Windows.RegisterWindow"
+﻿<Window x:Class="TravelPal.Windows.TravelsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelPal.Windows"
         mc:Ignorable="d"
-         Title="RegisterWindow" Height="450" Width="800" FontFamily="Arial" Background="MintCream">
+              Title="TravelsWindow" Height="450" Width="800" FontFamily="Arial" Background="MintCream">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -28,20 +28,16 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-
+        <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
 
         <TextBlock Grid.Column="2" Grid.Row="1" FontSize ="56" Text="TravelPal" Margin="20" Foreground="#7B68EE" FontWeight="Bold"/>
-        <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="20" Text="Choose your Username" Margin="0,0,0,5" HorizontalAlignment="Center" />
-        <TextBox x:Name="userName" Grid.Column="2" Grid.Row="3" Width="150" />
-
-        <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="20" Text="Choose your Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
-        <TextBox x:Name="passWord" Grid.Column="2" Grid.Row="5" Width="150"/>
-
-        <TextBlock Grid.Column="2" Grid.Row="6" FontSize ="20" Text="Confirm Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
-        <TextBox x:Name="ConfirmPassWord" Grid.Column="2" Grid.Row="7" Width="150"/>
+        <TextBlock Grid.Column="4" Grid.Row="1" FontSize ="14" Text="Hello" Margin="0,0,0,5" HorizontalAlignment="Center"   />
+        <TextBlock Grid.Column="4" Grid.Row="1" FontSize ="14" Text="Username" Margin="110,0,0,5" HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
 
 
-        <Button x:Name="RegisterBtn" Content="Register" Click="RegisterBtn_Click" Grid.Column="2" Grid.Row="9" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
+        <Button x:Name="addTravelButton" Content="Add Travel" Grid.Column="2" Grid.Row="7" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+        <Button x:Name="checkDetailsButton" Content="Details" Grid.Column="2" Grid.Row="8" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+        <Button x:Name="removetravelsButton" Content="Remove" Grid.Column="2" Grid.Row="9" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
 
     </Grid>
