--- a/TravelPal/Windows/TravelsWindow.xaml
+++ b/TravelPal/Windows/TravelsWindow.xaml
@@ -27,6 +27,8 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
 
@@ -38,7 +40,7 @@
         <Button x:Name="addTravelBtn" Content="Add Travel" Click="addTravelBtn_Click" Grid.Column="2" Grid.Row="7" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="checkDetailsBtn" Content="Details" Click="checkDetailsBtn_Click" Grid.Column="2" Grid.Row="8" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="removetravelsBtn" Content="Remove" Click="removetravelsBtn_Click" Grid.Column="2" Grid.Row="9" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
-
+        <Button x:Name="signOutBtn" Content="Sign out" Click="signOutBtn_Click" Grid.Column="2" Grid.Row="11" Margin="35,10,35,0" Width="90" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
     </Grid>
 </Window>
