--- a/TravelPal/MainWindow.xaml
+++ b/TravelPal/MainWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:local="clr-namespace:TravelPal"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" FontFamily="Arial" Background="MintCream">
+    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -28,9 +30,9 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
+        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
 
-        <TextBlock Grid.Column="2" Grid.Row="1" FontSize ="56" Text="TravelPal" Margin="20" Foreground="#7B68EE" FontWeight="Bold"/>
+        
        
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="20" Text="Username" Margin="0,0,0,5" HorizontalAlignment="Center"   />
         
