--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -10,7 +10,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="240"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="20"/>
@@ -28,9 +28,9 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
+        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
 
-        <TextBlock Grid.Column="2" Grid.Row="1" FontSize ="56" Text="TravelPal" Margin="20" Foreground="#7B68EE" FontWeight="Bold"/>
+        
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="30" Text="Add Details"  HorizontalAlignment="center"   />
 
         <TextBlock Grid.Column="1" Grid.Row="3" FontSize ="20" Text="Country:" Margin="0,0,10,10" HorizontalAlignment="right"   />
@@ -47,7 +47,7 @@
 
         <Button x:Name="saveDetailsBtn" Content="Save" Grid.Column="2" Click="saveDetailsBtn_Click" Grid.Row="8" FontSize="10" Margin ="85,5" Width="60" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
-        <Button x:Name="goBackBtn" Content="Go back to previous page" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="9" FontSize="10" Margin ="85,5" Width="120" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+        <Button x:Name="goBackBtn" Content="Go back to previous page" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="9" FontSize="10" Margin ="85,5" Width="10" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
     </Grid>
 </Window>
