--- a/TravelPal/Windows/TravelDetailsWindow.xaml
+++ b/TravelPal/Windows/TravelDetailsWindow.xaml
@@ -30,7 +30,7 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="2" Grid.Row="1" FontSize ="56" Text="TravelPal" Margin="20" Foreground="#7B68EE" FontWeight="Bold"/>
+        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
         
         
         <Button x:Name="goBackBtn" Content="Go back to previous page" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="9" FontSize="10" Margin ="85,5" Width="120" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
