--- a/TravelPal/Windows/TravelsWindow.xaml
+++ b/TravelPal/Windows/TravelsWindow.xaml
@@ -10,7 +10,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="240"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="20"/>
@@ -32,7 +32,7 @@
         </Grid.RowDefinitions>
         <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
 
-        <TextBlock Grid.Column="2" Grid.Row="1" FontSize ="56" Text="TravelPal" Margin="20" Foreground="#7B68EE" FontWeight="Bold"/>
+        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
         <TextBlock Grid.Column="4" Grid.Row="1" FontSize ="14" Text="Hello" Margin="0,0,0,5" HorizontalAlignment="Center"   />
         <TextBlock Grid.Column="4" Grid.Row="1" FontSize ="14" Text="Username" Margin="110,0,0,5" HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
 
