More edits to spacing

--- a/TravelPal/MainWindow.xaml
+++ b/TravelPal/MainWindow.xaml
@@ -20,7 +20,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition Height="150"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="30"/>
