--- a/TravelPal/MainWindow.xaml
+++ b/TravelPal/MainWindow.xaml
@@ -32,14 +32,13 @@
         </Grid.RowDefinitions>
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="150px"/>
 
-        
-       
+
+
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="20" Text="Username" Margin="0,0,0,5" HorizontalAlignment="Center"   />
-        
-        <TextBox x:Name="userName" Grid.Column="2" Grid.Row="3" Width="150" />
+        <TextBox x:Name="Username" Grid.Column="2" Grid.Row="3" Width="150" />
 
         <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="20" Text="Password" Margin="0,10,0,5" HorizontalAlignment="Center"  />
-        <TextBox x:Name="passWord" Grid.Column="2" Grid.Row="5" Width="150"/>
+        <TextBox x:Name="Password" Grid.Column="2" Grid.Row="5" Width="150"/>
         
         
         <Button x:Name="SignInBtn" Content="Sign In" Click="SignInBtn_Click" Grid.Column="2" Grid.Row="7" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE"  Foreground="MintCream"/>
