--- a/TravelPal/Windows/RegisterWindow.xaml
+++ b/TravelPal/Windows/RegisterWindow.xaml
@@ -14,6 +14,7 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="20"/>
+            
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -26,22 +27,25 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
 
 
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
-        <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="20" Text="Choose your Username" Margin="0,0,0,5" HorizontalAlignment="Center" />
+        <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="18" Text="Choose your Username" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox x:Name="userName" Grid.Column="2" Grid.Row="3" Width="150" />
 
-        <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="20" Text="Choose your Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
+        <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="18" Text="Choose your Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox x:Name="passWord" Grid.Column="2" Grid.Row="5" Width="150"/>
 
-        <TextBlock Grid.Column="2" Grid.Row="6" FontSize ="20" Text="Confirm Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
+        <TextBlock Grid.Column="2" Grid.Row="6" FontSize ="18" Text="Confirm Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox x:Name="ConfirmPassWord" Grid.Column="2" Grid.Row="7" Width="150"/>
 
+        <TextBlock Grid.Column="2" Grid.Row="8" FontSize ="18" Text="Country of Origin" Margin="0,0,0,5" HorizontalAlignment="Center" />
+        <ComboBox Name="cbCountries" Grid.Column="2" Grid.Row="9" Height="30"  />
 
-        <Button x:Name="RegisterBtn" Content="Register" Click="RegisterBtn_Click" Grid.Column="2" Grid.Row="9" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
+        <Button x:Name="RegisterBtn" Content="Register" Click="RegisterBtn_Click" Grid.Column="4" Grid.Row="10" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
 
 
     </Grid>
