--- a/TravelPal/Windows/TravelsWindow.xaml
+++ b/TravelPal/Windows/TravelsWindow.xaml
@@ -33,8 +33,8 @@
         <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
 
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
-        <TextBlock Grid.Column="4" Grid.Row="1" FontSize ="14" Text="Hello" Margin="0,0,0,5" HorizontalAlignment="Center"   />
-        <TextBlock Grid.Column="4" Grid.Row="1" FontSize ="14" Text="Username" Margin="110,0,0,5" HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
+
+        <Label Name="lblUsername" Grid.Column="4" Grid.Row="1" FontSize ="14" Content="Details"   HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
 
 
         <Button x:Name="addTravelBtn" Content="Add Travel" Click="addTravelBtn_Click" Grid.Column="2" Grid.Row="7" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
