--- a/TravelPal/Windows/RegisterWindow.xaml
+++ b/TravelPal/Windows/RegisterWindow.xaml
@@ -36,11 +36,11 @@
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="18" Text="Choose your Username" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox x:Name="userName" Grid.Column="2" Grid.Row="3" Width="150" />
 
-        <TextBlock Grid.Column="2" Grid.Row="4" FontSize ="18" Text="Choose your Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
-        <TextBox x:Name="passWord" Grid.Column="2" Grid.Row="5" Width="150"/>
+        <Label Grid.Column="2" Grid.Row="4" FontSize ="18" Content="Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
+        <PasswordBox x:Name="txtPassword" Grid.Column="2" Grid.Row="5" Width="150"/>
 
-        <TextBlock Grid.Column="2" Grid.Row="6" FontSize ="18" Text="Confirm Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
-        <TextBox x:Name="ConfirmPassWord" Grid.Column="2" Grid.Row="7" Width="150"/>
+        <Label Grid.Column="2" Grid.Row="6" FontSize ="18" Content="Confirm Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
+        <PasswordBox x:Name="txtConfirmPassword" Grid.Column="2" Grid.Row="7" Width="150"/>
 
         <TextBlock Grid.Column="2" Grid.Row="8" FontSize ="18" Text="Country of Origin" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <ComboBox Name="cbCountries" Grid.Column="2" Grid.Row="9" Height="30"  />
