--- a/TravelPal/Windows/RegisterWindow.xaml
+++ b/TravelPal/Windows/RegisterWindow.xaml
@@ -34,7 +34,7 @@
 
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="18" Text="Choose your Username" Margin="0,0,0,5" HorizontalAlignment="Center" />
-        <TextBox x:Name="userName" Grid.Column="2" Grid.Row="3" Width="150" />
+        <TextBox Name="txtUsername" Grid.Column="2" Grid.Row="3" Width="150" />
 
         <Label Grid.Column="2" Grid.Row="4" FontSize ="18" Content="Password" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <PasswordBox x:Name="txtPassword" Grid.Column="2" Grid.Row="5" Width="150"/>
@@ -45,7 +45,7 @@
         <TextBlock Grid.Column="2" Grid.Row="8" FontSize ="18" Text="Country of Origin" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <ComboBox Name="cbCountries" Grid.Column="2" Grid.Row="9" Height="30"  />
 
-        <Button x:Name="RegisterBtn" Content="Register" Click="RegisterBtn_Click" Grid.Column="4" Grid.Row="10" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
+        <Button x:Name="RegisterBtn" Content="Register" Click="RegisterBtn_Click" Grid.Column="4" Grid.Row="9" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
 
 
     </Grid>
