--- a/TravelPal/Windows/TravelDetailsWindow.xaml
+++ b/TravelPal/Windows/TravelDetailsWindow.xaml
@@ -31,8 +31,25 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
-        
-        
-        <Button x:Name="goBackBtn" Content="Go back to previous page" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="9" FontSize="10" Margin ="85,5" Width="120" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+
+        <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
+
+        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
+
+        <Label Name="lblUsername" Grid.Column="4" Grid.Row="1" FontSize ="14" Content="Details"   HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
+
+        <TextBlock Grid.Column="1" Grid.Row="7" Text="Destination"  FontSize ="14" />
+        <TextBlock Grid.Column="1" Grid.Row="8" Text="Country"  FontSize ="14" />
+        <TextBlock Grid.Column="1" Grid.Row="9" Text="Travellers"  FontSize ="14" />
+
+        <TextBox Name="txtDestination" Grid.Column="2" Grid.Row="7"/>
+        <ComboBox Name="cbCountry" Grid.Column="2" Grid.Row="8"/>
+        <ComboBox Name="cbTravellers" Grid.Column="2" Grid.Row="9" Width="50"/>
+
+
+
+
+
+        <Button x:Name="goBackBtn" Content="Go back to previous page" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="11" FontSize="10" Margin ="85,5" Width="120" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
     </Grid>
 </Window>
