--- a/TravelPal/Windows/TravelDetailsWindow.xaml
+++ b/TravelPal/Windows/TravelDetailsWindow.xaml
@@ -19,18 +19,18 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="120"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="30"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="30"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
+        <Image Source="/Images/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
 
         <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
 
@@ -38,14 +38,17 @@
 
         <Label Name="lblUsername" Grid.Column="4" Grid.Row="1" FontSize ="14" Content="Details"   HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
 
-        <TextBlock Grid.Column="1" Grid.Row="7" Text="Destination"  FontSize ="14" />
-        <TextBlock Grid.Column="1" Grid.Row="8" Text="Country"  FontSize ="14" />
-        <TextBlock Grid.Column="1" Grid.Row="9" Text="Travellers"  FontSize ="14" />
+        <TextBlock Grid.Column="1" Grid.Row="5" Text="Destination"  FontSize ="14" />
+        <TextBlock Grid.Column="1" Grid.Row="6" Text="Country"  FontSize ="14" />
+        <TextBlock Grid.Column="1" Grid.Row="7" Text="Travellers"  FontSize ="14" />
+        <TextBlock Grid.Column="4" Grid.Row="4" Text="Packing List"  FontSize ="14" />
 
-        <TextBox Name="txtDestination" Grid.Column="2" Grid.Row="7"/>
-        <ComboBox Name="cbCountry" Grid.Column="2" Grid.Row="8"/>
-        <ComboBox Name="cbTravellers" Grid.Column="2" Grid.Row="9" Width="50"/>
 
+        <TextBox Name="txtDestination" Grid.Column="2" Grid.Row="5"  Width="200"/>
+        <ComboBox Name="cbCountry" Grid.Column="2" Grid.Row="6"  Width="200"/>
+        <ComboBox Name="cbTravellers" Grid.Column="2" Grid.Row="7" Width="50"/>
+
+        <ListView Name="lstPackingList" Grid.Column="4" Grid.Row="5" Grid.RowSpan="4"  />
 
 
 
