--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -28,7 +28,7 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
+        <Image Source="/Images/travelpal-logo.png"  Grid.Column="2" Grid.Row="1" Height="100px"/>
 
         
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="30" Text="Add Details"  HorizontalAlignment="center"   />
