--- a/TravelPal/Windows/RegisterWindow.xaml
+++ b/TravelPal/Windows/RegisterWindow.xaml
@@ -32,7 +32,8 @@
         </Grid.RowDefinitions>
 
 
-        <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
+        <Image Source="/Images/travelpal-logo.png"  Grid.Column="2" Grid.Row="1" Height="100px"/>
+        
         <TextBlock Grid.Column="2" Grid.Row="2" FontSize ="18" Text="Choose your Username" Margin="0,0,0,5" HorizontalAlignment="Center" />
         <TextBox Name="txtUsername" Grid.Column="2" Grid.Row="3" Width="150" />
 
