--- a/TravelPal/Windows/TravelsWindow.xaml
+++ b/TravelPal/Windows/TravelsWindow.xaml
@@ -30,7 +30,7 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <Image Width="200" Height="200" Source="B:\OPG1\Logo\travelpal-logo.png"/>
+        <Image Source="/Images/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
 
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
 
