--- a/TravelPal/Windows/TravelsWindow.xaml
+++ b/TravelPal/Windows/TravelsWindow.xaml
@@ -43,12 +43,12 @@
         <Button x:Name="signOutBtn" Content="Sign out" Click="signOutBtn_Click" Grid.Column="3" Grid.Row="11" Margin="35,10,35,0" Width="90" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
         <ListView Name="lstTravels" Grid.Column="2" Grid.Row="2" Grid.RowSpan="10">
-            <ListView.View>
+            <!--<ListView.View>
                 <GridView>
                     <GridViewColumn Header="Destination" Width="150"/>
                     <GridViewColumn Header="Country" Width="150"/>
                 </GridView>
-            </ListView.View>
+            </ListView.View>-->
         </ListView>
 
 
