--- a/TravelPal/Windows/TravelsWindow.xaml
+++ b/TravelPal/Windows/TravelsWindow.xaml
@@ -34,21 +34,17 @@
 
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
 
-        <Label Name="lblUsername" Grid.Column="4" Grid.Row="1" FontSize ="14" Content="Details"   HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
+        <Label Name="lblUsername" Grid.Column="3" Grid.Row="1" FontSize ="14" Content="Hello"   HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
 
 
         <Button x:Name="addTravelBtn" Content="Add Travel" Click="addTravelBtn_Click" Grid.Column="1" Grid.Row="7" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="checkDetailsBtn" Content="Details" Click="checkDetailsBtn_Click" Grid.Column="1" Grid.Row="8" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="removetravelsBtn" Content="Remove" Click="removetravelsBtn_Click" Grid.Column="1" Grid.Row="9" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="signOutBtn" Content="Sign out" Click="signOutBtn_Click" Grid.Column="3" Grid.Row="11" Margin="35,10,35,0" Width="90" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+        <Button x:Name="aboutBtn" Content="About TravelPal" Click="aboutBtn_Click" Grid.Column="3" Grid.Row="7" Margin="35,10,35,0" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
         <ListView Name="lstTravels" Grid.Column="2" Grid.Row="2" Grid.RowSpan="10">
-            <!--<ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Destination" Width="150"/>
-                    <GridViewColumn Header="Country" Width="150"/>
-                </GridView>
-            </ListView.View>-->
+           
         </ListView>
 
 
