--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -46,7 +46,8 @@
         <ComboBox Name="cmbType" SelectionChanged="CmbType_SelectionChanged" Grid.Column="2" Grid.Row="6" Width="150" HorizontalAlignment="Left">
             
         </ComboBox>
-        <TextBox Name="txtMeetingDetails" Grid.Column="2" Grid.Row="6" FontSize ="20" HorizontalAlignment="Right" Visibility="Hidden"/>
+        <TextBlock Name="txtbMeetingDetails" Grid.Column="1" Grid.Row="7" FontSize ="20" Text="Meeting Details: " HorizontalAlignment="Right" Visibility="Hidden"/>
+        <TextBox Name="txtMeetingDetails" Grid.Column="2" Grid.Row="7" Width="150"  FontSize ="20" HorizontalAlignment="Left"  Visibility="Hidden"/>
         <CheckBox Name="xbAllInclusive" Content="All Inclusive?" Grid.Column="2" Grid.Row="7" FontSize ="20"  Margin="0,0,10,10" Visibility="Hidden" />
 
         <TextBlock Grid.Column="3" Grid.Row="2" FontSize ="20" Text="Packing List"  HorizontalAlignment="right"   />
