--- a/TravelPal/Windows/RegisterWindow.xaml
+++ b/TravelPal/Windows/RegisterWindow.xaml
@@ -44,7 +44,7 @@
         <PasswordBox x:Name="txtConfirmPassword" Grid.Column="2" Grid.Row="7" Width="150"/>
 
         <TextBlock Grid.Column="2" Grid.Row="8" FontSize ="18" Text="Country of Origin" Margin="0,0,0,5" HorizontalAlignment="Center" />
-        <ComboBox Name="cbCountries" Grid.Column="2" Grid.Row="9" Height="30"  />
+        <ComboBox Name="cmbCountry" Grid.Column="2" Grid.Row="9" Height="30"  />
 
         <Button x:Name="RegisterBtn" Content="Register" Click="RegisterBtn_Click" Grid.Column="4" Grid.Row="9" Width="120" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="MintCream"/>
 
